spring-vt: perf-stat cache-miss/ctx-switch A/B + correct I/O-thread mechanism
Hardware-counter A/B (perf stat, matched ~18k rps, repeat cell agrees to
0.25%) isolating two cache-relevant choices, results in
results/perf-cohost2-*/FINDINGS.md:

- Compact object headers (JEP 519): real but modest cache win — cache-misses
  -2.0%/instr, L1 -3.1%/instr, IPC +1.0%. Modest because the path is
  DB-round-trip bound with a small per-request heap footprint.
- 1 vs 2 Netty I/O threads is a CACHE-LOCALITY story, NOT a context-switch
  one: ctx switches stayed ~flat (~18k/s), but a 2nd event loop split across
  cores 2,3 bounces connection/buffer state between caches -> IPC -6%,
  cache-misses +10%. Corrects GrpcServerConfig's earlier "fewer cross-thread
  wakeups" wording (the actual mechanism is cache locality).
- Context-switch rate is workload-governed (~6-7 per million instr), driven
  by virtual-thread park/unpark on the blocking JDBC round-trips — unchanged
  by headers or I/O-thread count.

The kept production config (compact headers ON + 1 I/O thread, already the
SPRING_VT_JVM_OPTS default) is the fewest-cache-misses / best-IPC cell.
README documents the JVM flags + the evidence table; CLAUDE.md records the
A/B and how to reproduce (needs perf_event_paranoid<=2). The contaminated
first run (12s warmup, cold-start errors) is intentionally not committed.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>